--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@
 <image src="./assets/images/movie-ranking.png" alt="A screen about projects" height="400"/>
 <h3><a href="./public/birthday-invite.html">Birth Invite Project</a></h3>
 <image src="./assets/images/birthday-invite.png" alt="A screen about projects" height="300"/>
-<a href="./public/contact.html">Contact me</a>
-<a href="./public/about.html">About me</a>
+<h4><a href="./public/contact.html">Contact me</a></h4>
+<h4><a href="./public/about.html">About me</a></h4>
